--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,17 @@
   padding: 2rem;
   text-align: center;
 }
+
+.header {
+  text-align: center;
+  font-size: 2.5rem;
+  margin: 1rem;
+  width: 500px;
+}
+
+.calcContainer {
+  border: 1px solid black;
+  box-shadow: 0px 20px 20px blue;
+  width: 500px;
+  height: 500px;
+}
