--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .header {
@@ -17,4 +18,19 @@
   box-shadow: 0px 20px 20px blue;
   width: 500px;
   height: 500px;
+}
+
+.input {
+  width: 90%;
+  color: white;
+  text-align: right;
+  background-color: transparent;
+  border: none;
+  padding: 1rem;
+  font-size: 2rem;
+}
+
+.input:focus {
+  border: none;
+  outline: none;
 }
